<resources>
    <string name="app_name">YouTubeMusic</string>
    <string name="label_saved_musics">Saved</string>
    <string name="label_youtube_musics">YouTube</string>
    <string name="label_fragment_title_youtube_musics">YouTube Music</string>
    <string name="label_fragment_title_saved_music">Saved Music</string>
    <string name="image_of_playlist">Image of playList</string>
    <string name="thumbnails_of_playlist">Thumbnails of playList</string>
    <string name="label_videos_count">%d videos</string>
    <string name="label_views_count">%s views</string>
    <string name="label_not_found_play_lists">It seems you haven\'t yet created a playlist. Please create a playlist and add your first video</string>
    <string name="content_description_empty_list_image">Empty list image</string>
    <string name="content_description_thumbnail_video">Thumbnail of video item</string>
    <string name="content_description_download_music">Download YouTube video as music</string>
    <string name="select_playlist">Select playList</string>
    <string name="content_description_likes">Likes</string>
    <string name="label_size_progress">%1$.1f / %2$.1f M</string>
    <string name="label_duration_progress">%1s / %2s</string>
    <string name="label_playing_from">Playing from \‘%s\’</string>
    <string name="content_description_dislikes">Dislikes</string>
    <string name="select">Select</string>
    <string name="content_description_remove_music">Remove a downloaded music</string>
    <string name="label_sing_in">To download musics from your YouTube playlist, you need to sign in with Google</string>
    <string name="content_description_sing_in_illustration">Sign in illustration</string>
    <string name="label_first_playlist">Great job! Now you should select your first playlist to download musics from videos</string>
    <string name="label_empty_playlist">This playlist does not have any videos. Please add first video to the playlist</string>
    <string name="content_description_first_playlist">Selection first playlist illustration</string>
    <string name="dialog_confirm_deletion_music_message">Are you sure want to delete this music?</string>
    <string name="dialog_confirm_deletion_music_title">Delete music</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="label_log_out">Log out</string>
    <string name="broken_robot">A broken robot</string>
    <string name="label_failed_to_download">Failed to download</string>
    <string name="label_retry">Retry</string>
    <string name="label_action_pause">Pause</string>
    <string name="label_action_play">Play</string>
    <string name="label_action_next">Next</string>
    <string name="label_action_previous">Previous</string>
    <string name="content_description_more_options">More options for music item</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="label_add_edit_playlists">Playlists</string>
    <string name="label_edit_playlists">Playlists</string>
    <string name="dialog_confirm_deletion_playlist_title">Delete playlist</string>
    <string name="dialog_confirm_deletion_playlist_message">Are you sure you want to delete this playlist?</string>
    <string name="label_category_name">Playlist Name</string>
    <string name="label_rename">Rename</string>
    <string name="label_category_already_exists">This playlist already exists</string>
    <string name="label_add">Add</string>
    <string name="label_playlist_name_already_exists">Playlist with this name already exists</string>
    <string name="label_playlist_name_cannot_be_empty">You must enter name</string>
    <string name="label_create">Create</string>
    <string name="label_add_playlist">Add playlist</string>
    <string name="label_apply">Apply</string>
    <string name="label_no_playlist">You haven\'t created any playlist yet</string>
    <string name="label_delete">Delete</string>
    <string name="label_playlist">Playlist</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_playlists">Playlists</string>
    <string name="label_no_media_items">The playlist doesn\'t contain any downloaded music yet</string>
    <string name="label_downloading_music">Downloading musics</string>
    <string name="label_percentage">%d %%</string>
    <string name="bass_boost">Bass Boost</string>
    <string name="virtualizer">Virtualizer</string>
    <string name="label_equalizer">Equalizer</string>
    <string name="label_audio_effects">Audio Effects</string>
    <string name="label_presets">Presets</string>
    <string name="label_custom">Custom</string>
    <string name="label_try_again">Try again</string>
    <string name="label_error">Error: %s</string>
    <string name="label_create_playlist">Create playlist</string>
    <string name="label_rename_playlist">Rename playlist</string>
    <string name="label_download_manager">Download Manager</string>
    <string name="label_playlist_sync_binds">Playlist sync binds</string>
    <string name="label_downloading">Downloading</string>
    <string name="label_no_error_message">No error message</string>
    <string name="label_cancel_all">Cancel all</string>
    <string name="label_youtube_playlists_synchronization">YouTube Playlists synchronization</string>
    <string name="label_next">Next</string>
    <string name="label_back">Back</string>
    <string name="hint_select_you_tube_playlist">Select YouTube playlist from which you want to download music automatically</string>
    <string name="hint_select_app_playlists">Now select the application playlists to which downloaded media items should be assigned. Note that by default all are assigned to All playlist</string>
    <string name="hint_all_playlists_synchronized">You\'ve synchronized all your playlists</string>
    <string name="label_id">ID: %s</string>
    <string name="label_share">Share</string>
    <string name="label_share_video_url">Share video URL</string>
    <string name="label_share_media_file">Share media file</string>
    <string name="label_youtube_playlists">YouTube Playlists</string>
</resources>
