<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_broken_robot"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/broken_robot"
        android:src="@drawable/ic_a_broken_robot_pana" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_broken_robot"
        android:layout_centerHorizontal="true"
        android:text="@string/label_failed_to_download"
        android:textColor="@android:color/black"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/tv_error_message"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="5dp"
        android:maxHeight="100dp"
        android:textAlignment="center"
        android:textSize="12sp"
        tools:text="Error message" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_error_message"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/RedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="15dp"
            android:text="@string/dialog_cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_try_again"
            style="@style/PrimaryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="@dimen/mediumMargin"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:text="@string/label_retry" />

    </LinearLayout>

</RelativeLayout>