<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_youtube_playlists_synchronization"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.shuhart.stepview.StepView
            android:id="@+id/stepView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:sv_animationType="Line"
            app:sv_doneCircleColor="@color/colorAccent"
            app:sv_doneCircleRadius="12dp"
            app:sv_doneStepLineColor="@color/colorAccent"
            app:sv_doneStepMarkColor="@color/white"
            app:sv_nextStepLineColor="@color/colorAccent"
            app:sv_nextTextColor="@color/colorAccent"
            app:sv_selectedCircleColor="@color/colorAccent"
            app:sv_selectedCircleRadius="12dp"
            app:sv_selectedStepNumberColor="@color/white"
            app:sv_selectedTextColor="@color/colorAccent"
            app:sv_stepLineWidth="1dp"
            app:sv_stepPadding="4dp"
            app:sv_stepViewStyle="@style/StepView"
            app:sv_steps="@array/dialog_youtube_playlist_synchronization"
            app:sv_stepsNumber="2" />

        <TextView
            android:id="@+id/hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/hint_select_you_tube_playlist"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stepView"
            tools:text="Select YouTube playlist" />

        <LinearLayout
            android:id="@+id/list_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:animateLayoutChanges="true"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hint">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="100dp"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/you_tube_playlists"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:padding="8dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/hint_list_is_empty"
                style="@style/DescriptionText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/label_not_found_play_lists"
                android:visibility="gone"
                app:drawableTopCompat="@drawable/ic_empty_play_lists" />

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_or_add"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:enabled="false"
            android:text="@string/label_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:text="@string/dialog_cancel"
            app:layout_constraintEnd_toStartOf="@+id/next_or_add"
            app:layout_constraintTop_toBottomOf="@+id/list_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="32dp"
            android:text="@string/label_back"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/cancel"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_layout"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>